// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render draw 1`] = `
<div
  className="textDisplay"
  id="text-display-view"
>
  Draw
</div>
`;

exports[`render oTurn 1`] = `
<div
  className="textDisplay"
  id="text-display-view"
>
  O's Turn
</div>
`;

exports[`render oWin 1`] = `
<div
  className="textDisplay"
  id="text-display-view"
>
  O is the Winner!
</div>
`;

exports[`render xFirst 1`] = `
<div
  className="textDisplay"
  id="text-display-view"
>
  X Goes First
</div>
`;

exports[`render xTurn 1`] = `
<div
  className="textDisplay"
  id="text-display-view"
>
  X's Turn
</div>
`;

exports[`render xWin 1`] = `
<div
  className="textDisplay"
  id="text-display-view"
>
  X is the Winner!
</div>
`;
